syntax = "proto3";

package serverProto;

import "google/api/annotations.proto";

message User {
    int64 id = 1;
    string login = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string refreshToken = 6;
    int64 peopleNumber = 7;
}
message Developer {
    int64 id = 1;
    string name = 2;
    int64 age = 3;
    string primarySkill = 4;
}

message CreateDeveloperRequest {
    Developer developer = 1;
}

message CreateDeveloperResponse {
    int64 id = 1;
}

message ReadDeveloperRequest {
    int64 id = 1;
}

message ReadDeveloperResponse {
    Developer developer = 1;
}

message UpdateDeveloperRequest {
    int64 id = 1;
    Developer developer = 2;
}

message UpdateDeveloperResponse {
    Developer developer = 1;
}

message DeleteDeveloperRequest {
    int64 id = 1;
}

message DeleteDeveloperResponse {

}

message ReadAllDevelopersRequest {
}

message ReadAllDevelopersResponse {
    repeated Developer developers = 1;
}

message SignInRequest {
    string login = 1;
    string password = 2;
}

message SignInResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message SignUpRequest {
    User user  = 1;
}

message SignUpResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

service RestApp {
    rpc ReadAllDevelopers (ReadAllDevelopersRequest) returns (ReadAllDevelopersResponse) {
        option (google.api.http) = {
            get:"/api/v1/developers"
        };
    }
    rpc CreateDeveloper (CreateDeveloperRequest) returns (CreateDeveloperResponse) {
        option (google.api.http) = {
            post:"/api/v1/developers"
            body: "*"
        };
    }
    rpc ReadDeveloper (ReadDeveloperRequest) returns (ReadDeveloperResponse) {
        option (google.api.http) = {
            get:"/api/v1/developers/{id}"
        };
    }
    rpc UpdateDeveloper (UpdateDeveloperRequest) returns (UpdateDeveloperResponse) {
        option (google.api.http) = {
            put:"/api/v1/developers/{id}"
            body: "*"
        };
    }
    rpc DeleteDeveloper (DeleteDeveloperRequest) returns (DeleteDeveloperResponse) {
        option (google.api.http) = {
            delete:"/api/v1/developers/{id}"
        };
    }
    rpc SignIn (SignInRequest) returns (SignInResponse) {
        option (google.api.http) = {
            get:"/api/v1/signin/{login}/{password}"
        };
    }
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {
        option (google.api.http) = {
            post:"/api/v1/signup"
            body: "*"
        };
    }
}