syntax = "proto3";

package authProto;

import "google/api/annotations.proto";

message User {
    int64 id = 1;
    string login = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string refreshToken = 6;
    int64 peopleNumber = 7;
}
message Developer {
    int64 id = 1;
    string name = 2;
    int64 age = 3;
    string primarySkill = 4;
}

message CreateDeveloperRequest {
    Developer developer = 1;
}

message CreateDeveloperResponse {
    int64 id = 1;
}

message ReadDeveloperRequest {
    int64 id = 1;
}

message ReadDeveloperResponse {
    Developer developer = 1;
}

message UpdateDeveloperRequest {
    int64 id = 1;
    Developer developer = 2;
}

message UpdateDeveloperResponse {
    Developer developer = 1;
}

message DeleteDeveloperRequest {
    int64 id = 1;
}

message DeleteDeveloperResponse {

}

message ReadAllDevelopersRequest {
}

message ReadAllDevelopersResponse {
    repeated Developer developers = 1;
}

message SignInRequest {
    string login = 1;
    string password = 2;
}

message SignInResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message SignUpRequest {
    User user = 1;
}

message SignUpResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

service Auth {
    rpc ReadAllDevelopers (ReadAllDevelopersRequest) returns (ReadAllDevelopersResponse) {}
    rpc CreateDeveloper (CreateDeveloperRequest) returns (CreateDeveloperResponse) {}
    rpc ReadDeveloper (ReadDeveloperRequest) returns (ReadDeveloperResponse) {}
    rpc UpdateDeveloper (UpdateDeveloperRequest) returns (UpdateDeveloperResponse) {}
    rpc DeleteDeveloper (DeleteDeveloperRequest) returns (DeleteDeveloperResponse) {}
    rpc SignIn (SignInRequest) returns (SignInResponse) {}
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
}